Se corrigen las mayúsculas en los nombre de carpetas e imagen principal

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <h1 align="center"><b>Grupo de los Cuatro (G4)</b></h1>
     <hr>
     <figure>
-        <img src="G4_Nations.png" usemap="#paises" align="center">
+        <img src="g4_nations.png" usemap="#paises" align="center">
         <br>
         <figcaption align="center"><i>Países que integran el G4</i></figcaption>
     </figure>
     <map name="paises">
-        <area shape="circle" coords="395,341,100" href="Brasil/brasil.html" target="_blank" title="Brasil">
-        <area shape="circle" coords="600,115,25" href="Alemania/alemania.html" target="_blank" title="Alemania">
-        <area shape="circle" coords="822,221,80" href="India/india.html" target="_blank" title="India">
-        <area shape="circle" coords="995,171,55" href="Japon/japon.html" target="_blank" title="Japón">
+        <area shape="circle" coords="395,341,100" href="brasil/brasil.html" target="_blank" title="Brasil">
+        <area shape="circle" coords="600,115,25" href="alemania/alemania.html" target="_blank" title="Alemania">
+        <area shape="circle" coords="822,221,80" href="india/india.html" target="_blank" title="India">
+        <area shape="circle" coords="995,171,55" href="japon/japon.html" target="_blank" title="Japón">
     </map>
     <hr>
     <p align="justify">
