agregué un texto al final

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     </p>
     <hr>
     <p align="right"><i>Tomado de <a href="https://es.wikipedia.org/wiki/Grupo_de_los_cuatro" target="_blank">Wikipedia</i></a></p>
+    <p>Buen trabajo</p>
 </body>
 </html>
